[package]
name = "teamscale-timestamp"
version = "0.1.0"
authors = ["Fabian Streitel <streitel@cqse.eu>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
regex = "1.1.9"
chrono = "0.4.6"
clap = "2.27.0"
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"